tests/errors/semantics/explit_cast_required_for_equating.odl
main :: () -> void  {
    x := 0pd;
    y := 0;
    xp := &x;
    yp := &y;
    yp == xp;
};